[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ticker = "0.1.1"
notify-rust = "4"
crossterm = "0.23"
serde = { version = "1", optional = true, features = ["derive"]}
tui = "~0.18.0"
